[MODEXPW-584]. Update EDI claim file format